--- a/style.css
+++ b/style.css
@@ -11,3 +11,23 @@
     text-shadow: 0 0 10px white;
     /* background-color: beige; */
 }
+
+.text-secondary {
+    font-style: italic; 
+}
+
+.nav-item {
+    font-size: large;
+}
+
+/* h2, h4 {
+    margin-bottom: 0px;
+} */
+
+/* h4 {
+    margin-top: 30px;
+} */
+
+h5 {
+    font-weight: normal;
+}
