--- a/style.css
+++ b/style.css
@@ -49,3 +49,18 @@ a:hover {
 }
 
 /* CSS v mobilní verzi ??? window contact musí mít jiné rozměry */
+@media only screen and (max-width: 800px) {
+    h1 {
+  
+    }
+    
+    li {
+      margin-right: 10px;
+    }
+  
+    a {
+      width: 100px;
+      padding: 5px 0;
+      font-size: 16px;
+    }
+  }
