--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h5 {
 /* změna stylu odkazů */
 
 a {
-    color: white;
+    color: unset;
     text-decoration: none; 
 }
 
@@ -51,14 +51,13 @@ a:hover {
 }
 
 /* stejná výška všech karet článk */
-
 .card {
-    height: 440px;
+    min-height: 450px;
 }
 
 /* šedé pohybující se pozadí v některých sekcích */
 
-#matous-burysek, #ucetni-software {
+#matous-burysek, #ucetni-software, #clanek, #kontakt {
     background-image: url("/assets/images/grey-bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -66,17 +65,24 @@ a:hover {
     background-attachment: fixed;
 }
 
+/* změna tabulky */
+table, td {
+    padding-left: 0px !important;
+    border-left: 0px;
+    border: none;
+}
+
 /* kontaktní okno - nevyužívá Bootstrap */
 
 #window-contact {
     display: none;
     position: fixed;
-    top: 17%;
+    top: 15%;
     left: 20%;
     width: 60%;
     background-color: hsl(220, 90%, 56%);
     border-radius: 15px;
-    /* box-shadow: 0 0 50px hsl(220, 90%, 56%), 0 0 30px hsl(220, 90%, 56%), 0 0 10px hsl(220, 90%, 56%); */
+    box-shadow: 0 0 10px black;
     color: white;
 }
 
