--- a/style.css
+++ b/style.css
@@ -103,17 +103,16 @@ table, td {
 
 /* CSS v mobilní verzi ??? window contact musí mít jiné rozměry */
 @media only screen and (max-width: 800px) {
-    h1 {
-  
+    #window-contact {
+        display: none;
+        position: fixed;
+        top: 5%;
+        left: auto;
+        right: auto;
+        width: 90%;
+        background-color: hsl(220, 90%, 56%);
+        border-radius: 15px;
+        box-shadow: 0 0 10px black;
+        color: white;
     }
-    
-    li {
-      margin-right: 10px;
-    }
-  
-    a {
-      width: 100px;
-      padding: 5px 0;
-      font-size: 16px;
-    }
-  }
+}
